--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -3,7 +3,7 @@
 <!-- Insert generated snippet here -->
 <script src="https://giscus.app/client.js" data-repo="Chocolateater/FD-Class-Giscus" data-repo-id="R_kgDOMnoLpw"
     data-category="Announcements" data-category-id="DIC_kwDOMnoLp84Ch5Ja" data-mapping="url" data-strict="1"
-    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme"
+    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="light"
     data-lang="zh-CN" data-loading="lazy" crossorigin="anonymous" async>
     </script>
 <!-- Synchronize Giscus theme with palette -->
